--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite App</title>
+    <title>Dzień Kobiet</title>
   </head>
   <body>
     <div id="app"></div>
